[package]
name = "poorprof"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstack = { version = "0.3", features = ["dw"], default-features = false }
cpp_demangle = "0.2.16"
inferno = "0.9.6"
ctrlc = "3.1.4"
